Update main to output generated at 723f2ec

--- a/index.html
+++ b/index.html
@@ -87,6 +87,9 @@ I also use <a href="https://twitter.com/thegeorgejkaye">Twitter</a>.</p>
 <li><strong>Personal email:</strong> george at <a href="http://georgejkaye.com">georgejkaye.com</a></li>
 <li><strong>Address:</strong> Office 218, School of Computer Science, University Road W, B15 2TT</li>
 </ul>
+<h2>Contributing</h2>
+<p>If you find a mistake, make an <a href="https://github.com/georgejkaye/georgejkaye.github.io/issues">issue</a> and I'll try to sort it out.
+Alternatively, you can figure out how my static site generator works and fix it yourself with a <a href="https://github.com/georgejkaye/georgejkaye.github.io/pulls">pull request</a>!</p>
 <h2>Links</h2>
 <ul>
 <li><a href="/pictures"><strong>Pictures of me</strong></a></li>
@@ -96,9 +99,10 @@ I also use <a href="https://twitter.com/thegeorgejkaye">Twitter</a>.</p>
 <li><a href="/adventures"><strong>Adventures in Academia</strong></a> <em>A series of entertaining escapades</em></li>
 <li><a href="/trains/stations"><strong>Railway station signs</strong></a> <em>I take pictures of station signs</em></li>
 </ul>
-<h2>Contributing</h2>
-<p>If you find a mistake, make an <a href="https://github.com/georgejkaye/georgejkaye.github.io/issues">issue</a> and I'll try to sort it out.
-Alternatively, you can figure out how my static site generator works and fix it yourself with a <a href="https://github.com/georgejkaye/georgejkaye.github.io/pulls">pull request</a>!</p>
+<h4>Douvk webring</h4>
+<p>← <a href="https://brunorochapaiva.github.io/">Bruno da Rocha Paiva</a>
+•
+<a href="https://jonfreer.co.uk/">Jon Freer</a> →</p>
 
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
