Update main to output generated at 8e9bb23

--- a/papers/index.html
+++ b/papers/index.html
@@ -75,7 +75,7 @@
 <span class="author"><a href="https://www.cs.bham.ac.uk/~drg/"
                                 title="Dan Ghica's personal webpage"
                                 >Dan Ghica</a></span>, <span class="author author-me">George Kaye</span></div><div class="paper-details">
-    Arxiv preprint
+    Arxiv preprint, to appear in FSCD 2023
 </div><div id="2023-02-19-rewriting-traced-comonoid-abstract" class="paper-abstract" >
     We adapt the existing work on rewriting string diagrams using hypergraphs in order to apply it to settings with a traced comonoid structure, which happens to be where we model digital circuits.
 </div><div class="talk-buttons">
