Update main to output generated at 02b510f

--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@ Alternatively, you can figure out how my static site generator works and fix it 
 <li><a href="/trains/stations"><strong>Railway station signs</strong></a> <em>I take pictures of station signs</em></li>
 </ul>
 <h4>Douvk webring</h4>
-<p>← <a href="https://brunorochapaiva.github.io/">Bruno da Rocha Paiva</a>
+<p><a href="https://brunorochapaiva.github.io/">← Bruno da Rocha Paiva</a>
 •
-<a href="https://jonfreer.co.uk/">Jon Freer</a> →</p>
+<a href="https://jonfreer.co.uk/">Jon Freer →</a></p>
 
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
