Update main to output generated at f7cc4ac

--- a/pictures/index.html
+++ b/pictures/index.html
@@ -77,10 +77,20 @@
 
 <div class="picture-block">
     <div class="picture-picture">
+        <a href="/images/me/syco11.webp" title="Original image"><img src="/images/me/syco11.webp" alt=></a>
+    </div>
+    <div class="picture-caption">
+        The conference photo for SYCO 11, taken in the Turing Building at Ecole Polytechnique.
+        
+    </div>
+</div>
+
+<div class="picture-block">
+    <div class="picture-picture">
         <a href="/images/me/syco10.webp" title="Original image"><img src="/images/me/syco10.webp" alt=></a>
     </div>
     <div class="picture-caption">
-        The conference photo for SYCO 10, taking in the Informatics Building.
+        The conference photo for SYCO 10, taken in the Informatics Building.
         
     </div>
 </div>
