Update main to output generated at 8bd61c2

--- a/trips/2023-06-02-barnsdale/index.html
+++ b/trips/2023-06-02-barnsdale/index.html
@@ -69,7 +69,8 @@
   </div>
 </div>
   <div id="text" class="content container wide">
-    <h2>Rutters Meadow to Birmingham</h2>
+    <h2>Birmingham to Barnsdale</h2>
+<p>Walk to Little Park nice and early to catch...</p>
 <table>
 <thead>
 <tr>
@@ -87,11 +88,10 @@
 <tr>
 <td><a href="https://bustimes.org/stops/43000203501">Birmingham Smallbrook Queensway</a></td>
 <td>09:55</td>
-<td>A</td>
+<td></td>
 </tr>
 </tbody>
 </table>
-<h2>Birmingham Coach Station to Leicester</h2>
 <p>Walk to Digbeth Coach Station to catch...</p>
 <table>
 <thead>
@@ -114,7 +114,6 @@
 </tr>
 </tbody>
 </table>
-<h2>Leicester to Melton Mowbray</h2>
 <p>Walk to Haymarket Bus Station to catch...</p>
 <table>
 <thead>
@@ -137,8 +136,7 @@
 </tr>
 </tbody>
 </table>
-<h2>Melton Mowbray to Oakham</h2>
-<p>Change stops to catch...</p>
+<p>Change stops to stand W4 to catch...</p>
 <table>
 <thead>
 <tr>
@@ -160,8 +158,118 @@
 </tr>
 </tbody>
 </table>
-<h2>Oakham to Barnsdale Lodge</h2>
 <p>Walk to Barnsdale Lodge along the Stamford Road.</p>
+<h2>Barnsdale to Birmingham</h2>
+<p>Walk to the main road to catch...</p>
+<table>
+<thead>
+<tr>
+<th><a href="https://bustimes.org/trips/264524479#stop-time-14407143676"><strong>10:10 Bland's 185</strong></a></th>
+<th></th>
+<th></th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td><a href="https://bustimes.org/stops/268060057?date=2023-06-03&amp;time=10%3A16">Barnsdale Hill Barnsdale Hill</a></td>
+<td></td>
+<td>10:16</td>
+</tr>
+<tr>
+<td><a href="https://bustimes.org/stops/2700LSBS2722">Stamford Bus Station</a></td>
+<td>10:38</td>
+<td></td>
+</tr>
+</tbody>
+</table>
+<p>Walk to Bay 5 to catch...</p>
+<table>
+<thead>
+<tr>
+<th><a href="https://bustimes.org/trips/270705830#stop-time-14829757290"><strong>11:30 Bland's R5</strong></a></th>
+<th></th>
+<th></th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td><a href="https://bustimes.org/stops/270002701634?date=2023-06-03&amp;time=11%3A30">Stamford Bus Station (Bay 5)</a></td>
+<td></td>
+<td>11:30</td>
+</tr>
+<tr>
+<td><a href="https://bustimes.org/stops/268060048">Uppingham North Street East (Bay 3)</a></td>
+<td>12:15</td>
+<td></td>
+</tr>
+</tbody>
+</table>
+<p>Walk to Bay 2 to catch...</p>
+<table>
+<thead>
+<tr>
+<th><a href="https://bustimes.org/trips/262094829#stop-time-14895909235"><strong>12:25 Centrebus 747</strong></a></th>
+<th></th>
+<th></th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td><a href="https://bustimes.org/stops/270002701634?date=2023-06-03&amp;time=11%3A30">Uppingham North Street East (Bay 2)</a></td>
+<td></td>
+<td>12:25</td>
+</tr>
+<tr>
+<td><a href="https://bustimes.org/stops/269057006">Leicester Haymarket Bus Station (Stand HD)</a></td>
+<td>13:20</td>
+<td></td>
+</tr>
+</tbody>
+</table>
+<p>Wait for a bit and then go to St Margaret's to catch...</p>
+<table>
+<thead>
+<tr>
+<th><a href="https://bustimes.org/trips/269317347#stop-time-14915073967"><strong>13:30 National Express 150</strong></a></th>
+<th></th>
+<th></th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td><a href="https://bustimes.org/stops/269030094?date=2023-06-03&amp;time=14%3A20">Leicester St Margaret's Bus Station (Stand SY)</a></td>
+<td></td>
+<td>14:20</td>
+</tr>
+<tr>
+<td><a href="https://bustimes.org/stops/43002103108">Digbeth Birmingham Coach Station (Stand 8)</a></td>
+<td>15:30</td>
+<td></td>
+</tr>
+</tbody>
+</table>
+<p>Lazily wander back to your preferred city centre stop...</p>
+<table>
+<thead>
+<tr>
+<th><a href="https://bustimes.org/trips/268685558#stop-time-14683964042"><strong>16:48 National Express West Midlands 24</strong></a></th>
+<th></th>
+<th></th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td><a href="https://bustimes.org/stops/43000206801?date=2023-06-03&amp;time=16%3A50">Birmingham Albert St (Stop MS9)</a></td>
+<td></td>
+<td>16:50</td>
+</tr>
+<tr>
+<td><a href="https://bustimes.org/stops/43000318402">Digbeth Birmingham Coach Station (Stand 8)</a></td>
+<td>17:27</td>
+<td></td>
+</tr>
+</tbody>
+</table>
 
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
