Update main to output generated at 4ba01d7

--- a/papers/index.html
+++ b/papers/index.html
@@ -75,12 +75,12 @@
 <span class="author"><a href="https://www.cs.bham.ac.uk/~drg/"
                                 title="Dan Ghica's personal webpage"
                                 >Dan Ghica</a></span>, <span class="author author-me">George Kaye</span></div><div class="paper-details">
-    Arxiv preprint, to appear in FSCD 2023
-</div><div id="2023-02-19-rewriting-traced-comonoid-abstract" class="paper-abstract" >
+    FSCD 2023
+</div><div id="undefined-abstract" class="paper-abstract" >
     We adapt the existing work on rewriting string diagrams using hypergraphs in order to apply it to settings with a traced comonoid structure, which happens to be where we model digital circuits.
 </div><div class="talk-buttons">
     <div>
-    <span class="link-button"><a href="/files/papers/2023-02-19-rewriting-traced-comonoid.pdf" title="PDF version of 'Rewriting modulo traced comonoid structure'">pdf</a></span> • <span class="link-button"><a href="https://arxiv.org/abs/2302.09631" title="Arxiv page for 'Rewriting modulo traced comonoid structure'">arxiv</a></span> • <span class="link-button"><a href="/files/papers/2023-02-19-rewriting-traced-comonoid.bib.txt" title="Bibtex entry for 'Rewriting modulo traced comonoid structure'">bibtex</a></span>
+    <span class="link-button"><a href="https://doi.org/10.4230/LIPIcs.FSCD.2023.14" title="Published version of 'Rewriting modulo traced comonoid structure'">paper</a></span> • <span class="link-button"><a href="/files/papers/fscd2023.pdf" title="PDF of 'Rewriting modulo traced comonoid structure' (published version)">(pdf)</a></span> • <span class="link-button"><a href="https://arxiv.org/abs/2302.09631" title="Arxiv page for 'Rewriting modulo traced comonoid structure'">arxiv</a></span> • <span class="link-button"><a href="/files/papers/2023-02-19-rewriting-traced-comonoid.pdf" title="PDF version of 'Rewriting modulo traced comonoid structure' (arxiv version)">(pdf)</a></span> • <span class="link-button"><a href="/files/papers/undefined.bib.txt" title="Bibtex entry for 'Rewriting modulo traced comonoid structure'">bibtex</a></span>
 </div>
 </div>
     </div>
@@ -93,11 +93,11 @@
                                 title="David Sprunger's personal webpage"
                                 >David Sprunger</a></span></div><div class="paper-details">
     Arxiv preprint
-</div><div id="2023-02-13-compositional-circuits-abstract" class="paper-abstract" >
+</div><div id="undefined-abstract" class="paper-abstract" >
     We model digital circuits with delay and feedback as morphisms in a symmetric traced monoidal category, formalise their semantics as stream functions with certain properties, and present equational theory for reasoning with them.
 </div><div class="talk-buttons">
     <div>
-    <span class="link-button"><a href="/files/papers/2023-02-13-compositional-circuits.pdf" title="PDF version of 'A compositional theory of digital circuits'">pdf</a></span> • <span class="link-button"><a href="https://arxiv.org/abs/2201.10456" title="Arxiv page for 'A compositional theory of digital circuits'">arxiv</a></span> • <span class="link-button"><a href="/files/papers/2023-02-13-compositional-circuits.bib.txt" title="Bibtex entry for 'A compositional theory of digital circuits'">bibtex</a></span>
+    <span class="link-button"><a href="https://arxiv.org/abs/2201.10456" title="Arxiv page for 'A compositional theory of digital circuits'">arxiv</a></span> • <span class="link-button"><a href="/files/papers/2023-02-13-compositional-circuits.pdf" title="PDF version of 'A compositional theory of digital circuits' (arxiv version)">(pdf)</a></span> • <span class="link-button"><a href="/files/papers/undefined.bib.txt" title="Bibtex entry for 'A compositional theory of digital circuits'">bibtex</a></span>
 </div>
 </div>
     </div>
@@ -108,11 +108,11 @@
                                 title="Dan Ghica's personal webpage"
                                 >Dan Ghica</a></span></div><div class="paper-details">
     Arxiv preprint
-</div><div id="2021-03-19-rewriting-abstract" class="paper-abstract" >
+</div><div id="undefined-abstract" class="paper-abstract" >
     We examine a variant of hypergraphs with the aim of creating a sound and complete graphical language for symmetric traced monoidal categories.
 </div><div class="talk-buttons">
     <div>
-    <span class="link-button"><a href="/files/papers/2021-03-19-rewriting.pdf" title="PDF version of 'Rewriting Graphically With Symmetric Traced Monoidal Categories'">pdf</a></span> • <span class="link-button"><a href="https://arxiv.org/abs/2010.06319" title="Arxiv page for 'Rewriting Graphically With Symmetric Traced Monoidal Categories'">arxiv</a></span> • <span class="link-button"><a href="/files/papers/2021-03-19-rewriting.bib.txt" title="Bibtex entry for 'Rewriting Graphically With Symmetric Traced Monoidal Categories'">bibtex</a></span>
+    <span class="link-button"><a href="https://arxiv.org/abs/2010.06319" title="Arxiv page for 'Rewriting Graphically With Symmetric Traced Monoidal Categories'">arxiv</a></span> • <span class="link-button"><a href="/files/papers/2021-03-19-rewriting.pdf" title="PDF version of 'Rewriting Graphically With Symmetric Traced Monoidal Categories' (arxiv version)">(pdf)</a></span> • <span class="link-button"><a href="/files/papers/undefined.bib.txt" title="Bibtex entry for 'Rewriting Graphically With Symmetric Traced Monoidal Categories'">bibtex</a></span>
 </div>
 </div>
     </div>
@@ -123,11 +123,11 @@
                                 title="Noam Zeilberger's personal webpage"
                                 >Noam Zeilberger</a></span></div><div class="paper-details">
     Masters dissertation (2019), University of Birmingham
-</div><div id="2019-04-08-masters-abstract" class="paper-abstract" >
+</div><div id="2019-04-08-masters.pdf-abstract" class="paper-abstract" >
     We detail the development of a set of tools to aid in the research of the topological properties of linear λ-terms when they are represented as 3-valent rooted maps.
 </div><div class="talk-buttons">
     <div>
-    <span class="link-button"><a href="/lamviz/" title="Page for '/lamviz/">page</a></span> • <span class="link-button"><a href="/files/papers/2019-04-08-masters.bib.txt" title="Bibtex entry for 'A visualiser for linear lambda-terms as rooted 3-valent maps'">bibtex</a></span>
+    <span class="link-button"><a href="/lamviz/" title="Page for '/lamviz/">page</a></span> • <span class="link-button"><a href="/files/papers/2019-04-08-masters.pdf" title="PDF version of 'A visualiser for linear lambda-terms as rooted 3-valent maps'">pdf</a></span> • <span class="link-button"><a href="/files/papers/2019-04-08-masters.pdf.bib.txt" title="Bibtex entry for 'A visualiser for linear lambda-terms as rooted 3-valent maps'">bibtex</a></span>
 </div>
 </div>
     </div>
