Update main to output generated at f95a5f4

--- a/talks/index.html
+++ b/talks/index.html
@@ -70,6 +70,21 @@
 </div>
   <div id="text" class="content container wide">
     <div class="card">
+    <div class="talk-title">Rewriting modulo traced comonoid structure</div>
+    <div>
+        <span class="talk-venue">
+            <a href="https://easyconferences.eu/fscd2023/" title="FSCD 2023, Rome webpage">FSCD 2023, Rome</a>
+        </span>
+        <span class="talk-date">
+            July 04, 2023
+        </span>
+    </div>
+    <div class="talk-buttons">
+<div>
+    <span class="link-button"><a href="/files/slides/2023-07-04-fscd2023-slides.pdf" title="Slides for 'Rewriting modulo traced comonoid structure">slides</a></span> • <span class="link-button"><a href="https://github.com/georgejkaye?tab=repositories&q=fscd2023" title="Github repos for 'Rewriting modulo traced comonoid structure">github</a></span>
+</div></div>
+</div>
+<div class="card">
     <div class="talk-title">A compositional theory of digital circuits</div>
     <div>
         <span class="talk-venue">
