Update main to output generated at c72b671

--- a/adventures/index.html
+++ b/adventures/index.html
@@ -95,6 +95,12 @@
 <li><a href="/blog/adventures/act2021/part-two">Adventures in ACTademia 2</a></li>
 <li><a href="/blog/adventures/act2021/part-three">Adventures in ACTademia 3</a></li>
 </ul>
+<h3>Stirchley shenanigans</h3>
+<ul>
+<li><a href="/blog/adventures/part-five/">Adventures in Academia 5</a></li>
+<li><a href="/blog/adventures/part-six/">Adventures in Academia 6</a></li>
+<li><a href="/blog/adventures/part-seven/">Adventures in Academia 7</a></li>
+</ul>
 
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
