Update main to output generated at 6bbc622

--- a/seminars/index.html
+++ b/seminars/index.html
@@ -103,6 +103,7 @@
 This guide should cover everything you need to know in order to make the seminar
 run smoothly.</p>
 <h2>To do list</h2>
+<h3>Termly</h3>
 <table>
 <thead>
 <tr>
@@ -129,7 +130,11 @@ run smoothly.</p>
 </tr>
 <tr>
 <td><a href="#solicit-speaker-suggestions">Solicit speaker suggestions</a></td>
-<td>Throughout the term</td>
+<td>Start of term</td>
+</tr>
+<tr>
+<td><a href="#advertise-talksbham-functionality">Advertise <code>talks@bham</code> functionality</a></td>
+<td>Start of term</td>
 </tr>
 </tbody>
 </table>
@@ -142,6 +147,18 @@ run smoothly.</p>
 </tr>
 </thead>
 <tbody>
+<tr>
+<td><a href="#negotiate-with-the-host">Negotiate with the host</a></td>
+<td>After speaker has been suggested</td>
+</tr>
+<tr>
+<td><a href="#make-contact-with-the-speaker">Make contact with the speaker</a></td>
+<td>After host has confirmed slot</td>
+</tr>
+<tr>
+<td><a href="#negotiate-with-the-speaker">Negotiate with the speaker</a></td>
+<td>After speaker has replied</td>
+</tr>
 <tr>
 <td><a href="#add-speaker-to-talksbham">Add speaker to <code>talks@bham</code></a></td>
 <td>When speaker is confirmed</td>
@@ -294,7 +311,7 @@ speaker but also to <em>chair</em> the talk.
 It is also the responsibility of the speaker to organise a social event for the
 speaker if one is desired, unless they ask you very nicely and you are feeling
 benevolent.</p>
-<h3>Make contact</h3>
+<h3>Make contact with the speaker</h3>
 <p>Once you are set on a slot, give the host the go-ahead to invite their speaker,
 ideally with you in cc.
 Speakers are more likely to respond to their friends and collaborators!
