Update main to output generated at 79d7c86

--- a/talks/index.html
+++ b/talks/index.html
@@ -100,6 +100,21 @@
 </div>
   <div id="text" class="content container wide">
     <div class="card">
+    <div class="talk-title">A Fully Compositional Theory of Digital Circuits</div>
+    <div>
+        <span class="talk-venue">
+            <a href="https://www.rtsys.informatik.uni-kiel.de/en/synchron-2023" title="SYNCHRON 2023, Kiel webpage">SYNCHRON 2023, Kiel</a>
+        </span>
+        <span class="talk-date">
+            November 27, 2023
+        </span>
+    </div>
+    <div class="talk-buttons">
+<div>
+    <span class="link-button"><a href="/files/slides/2023-11-27-synchron2023-slides.pdf" title="Slides for 'A Fully Compositional Theory of Digital Circuits">slides</a></span> • <span class="link-button"><a href="https://github.com/georgejkaye?tab=repositories&q=synchron2023" title="Github repos for 'A Fully Compositional Theory of Digital Circuits">github</a></span>
+</div></div>
+</div>
+<div class="card">
     <div class="talk-title">Rewriting modulo traced comonoid structure</div>
     <div>
         <span class="talk-venue">
@@ -235,6 +250,20 @@
 </div></div>
 </div>
 <h3>Visits</h3>
+<div class="card">
+    <span class="visit-venue">
+    <a href="https://www.rtsys.informatik.uni-kiel.de/en/synchron-2023" title="SYNCHRON 2023 webpage">SYNCHRON 2023</a>
+</span>
+<span class="visit-city">Kiel</span>
+<span class="visit-dates">November 27-December 01, 2023</span>
+</div>
+<div class="card">
+    <span class="visit-venue">
+    <a href="https://easyconferences.eu/fscd2023/" title="FSCD 2023 webpage">FSCD 2023</a>
+</span>
+<span class="visit-city">Rome</span>
+<span class="visit-dates">July 03-06, 2023</span>
+</div>
 <div class="card">
     <span class="visit-venue">
     <a href="http://zanasi.com/fabio/SLS/SLS-ucl.html" title="Second Meeting of the Southern Logic Seminar webpage">Second Meeting of the Southern Logic Seminar</a>
