Update main to output generated at c4287d5

--- a/seminars/index.html
+++ b/seminars/index.html
@@ -391,12 +391,23 @@ page to avoid cluttering the channel.</p>
 <p>If you're interested, I have
 <a href="https://github.com/georgejkaye/talks-bot">a script to generate the emails</a>.</p>
 <h3>Set up seminar room</h3>
-<p>On the day of the seminar, your only job is to set up the room!
+<p>On the day of the seminar, your only job is to set up the room!</p>
+<h4>Seating</h4>
+<p>These days it's good to set up at least 25 seats since we're a large group now!
+Depending on how the room is when you arrive it might be preferable for some of
+the rows to also have tables, but that's up to you.</p>
+<h4>Zoom</h4>
+<p>You need to set up the computer in the room and join the theory seminar zoom
+call.
 I already have <a href="https://georgejkaye.com/lg23">a guide on how to set up LG23</a>
 which you might find useful since LG23 is a bit non-standard.
 Other rooms in the university are a bit more straightforward.</p>
-<p>The important things to do are to set up the Zoom call and to get the slides on
-the screen.</p>
+<p>Make sure the online participants (if there are any) can hear you!</p>
+<h4>Slides</h4>
+<p>You will also need to get the slides up on the screen.
+Once they are, ensure that the speaker can actually change slides by flicking
+through them a little.</p>
+<h4>Chairing</h4>
 <p>Once you are ready to go, the host can begin their chairing duties.
 Even though you are now relinquished of responsibility, I find it's often good
 to be sitting somewhere you can get to the front fairly easily in case there's
