Update main to output generated at ae79505

--- a/seminars/index.html
+++ b/seminars/index.html
@@ -270,7 +270,8 @@ also be found in the navigation bar on the left of <code>talks@bham</code> once 
 logged in.</p>
 <p><img src="/images/seminars/adding.webp" alt="The talks@bham navigation bar, with 'Add a new talk' circled"></p>
 <p>To make sure it doesn't get forgotten later, you should make sure the Zoom
-details are added to the</p>
+details are added to the page; there's a sheet on the seminar organisation
+spreadsheet which has a template you can copy.</p>
 <h3>Solicit speaker suggestions</h3>
 <p>Send out an email to the Theory mailing list and put a message on the Discord
 asking for people to suggest speakers.
