Update main to output generated at 6a7fd1f

--- a/seminars/index.html
+++ b/seminars/index.html
@@ -223,6 +223,9 @@ This means that, providing you poll the rest of the group early enough, people
 should make an effort to accommodate the seminar!
 Even if the slot does have to be moved, the first preference is to keep the
 seminar on Fridays.</p>
+<p>If the slot changes, you should also let whoever manages the
+<a href="mailto:cs-calendar@contacts.bham.ac.uk">cs-calendar@contacts.bham.ac.uk</a>
+school calendar know, so they can update it on there.</p>
 <h3>Book the rooms</h3>
 <p>Once the slot is confirmed, you need to book the rooms.
 Before you go ahead and start booking every single Friday in the term, remember
