--- a/teaching/index.html
+++ b/teaching/index.html
@@ -101,6 +101,15 @@
   <div id="text" class="content container wide">
     <div class="card">
 <div class="module-title">
+    <a href=https://www.cs.bham.ac.uk/internal/modules/2023/06-35393/ title="Module page for Theories of Computation">Theories of Computation</a>
+</div>
+<div>
+    <span class="module-term">Spring 2024</span>
+    <span class="module-role">Teaching assistant</span>
+    <span class="module-institution">University of Birmingham</span>
+</div ></div >
+<div class="card">
+<div class="module-title">
     <a href=https://www.cs.bham.ac.uk/internal/modules/2021/06-35393/ title="Module page for Theories of Computation">Theories of Computation</a>
 </div>
 <div>
