[env] Add prettier run to workflow

--- a/src/apps/lamviz/visualiser.html
+++ b/src/apps/lamviz/visualiser.html
@@ -26,7 +26,7 @@ title: Lambda-term visualiser
 
     <p><b>Example:</b> (&lambda;x. &lambda;y. x y) a b
         <br>t = (\x. \y. x y) a b
-        <br>&Gamma; = a b</b>
+        <br>&Gamma; = a b
 
         <p>t = <input type="text" id="input"> &Gamma; = <input type="text" id="env"></p>
 
