--- a/src/pages/trains/scenarios/scenario.html
+++ b/src/pages/trains/scenarios/scenario.html
@@ -9,7 +9,7 @@ eleventyComputed:
     title: "{{ scenario.headcode }} {{ scenario.time }} <br> {{ scenario.origin }} to {{ scenario.destination }}"
 ---
 
-<img src="/images/scenarios/{{ scenario.headcode }}.webp" alt="{{ scenario.alt }}" title="Scenario image for '{{ title }}'"></img>
+<img src="/images/scenarios/{{ scenario.headcode }}.webp" alt="{{ scenario.alt }}" title="Scenario image for '{{ title }}'"/>
 
 <div class="scenario-info">
     <div><b>Traction:</b> {{ scenario.traction }}</div>
@@ -106,5 +106,5 @@ eleventyComputed:
     Requirements marked with an asterisk (*) feature fairly fleetingly and can be omitted without loss of enjoyment.
 </p>
 <p>
-    If you don’t have any of the requirements you can still play the scenario, just press F2 when the ‘Missing consist’ error comes up and click ‘cancel’ to bypass it.</div>
+    If you don’t have any of the requirements you can still play the scenario, just press F2 when the ‘Missing consist’ error comes up and click ‘cancel’ to bypass it.
 </p>
