--- a/src/apps/lamviz/gallery.html
+++ b/src/apps/lamviz/gallery.html
@@ -46,11 +46,11 @@ title: Lambda-term gallery
         Variables <input type="text" class="number-box" id="variables-box">
         &beta;-redexes<input type="text" class="number-box" id="betas-box">
         Sort <select id="sort">
-            <option value=0>Default</value>
-            <option value=1>Crossings: High-Low</value>
-            <option value=2>Crossings: Low-High</value>
-            <option value=3>Beta-redexes: High-Low</value>
-            <option value=4>Beta-redexes: Low-High</value>
+            <option value=0>Default</option>
+            <option value=1>Crossings: High-Low</option>
+            <option value=2>Crossings: Low-High</option>
+            <option value=3>Beta-redexes: High-Low</option>
+            <option value=4>Beta-redexes: Low-High</option>
         </select>
 
         <h3>Generation options</h3>
