Update main to output generated at 5681b1c

--- a/index.html
+++ b/index.html
@@ -200,11 +200,16 @@
           <a href="/trains/stations"><strong>Railway station signs</strong></a>
           <em>I take pictures of station signs</em>
         </li>
+      </ul>
+      <p>I like doing little coding projects: here are some of them:</p>
+      <ul>
         <li>
-          <a href="thesis.georgejkaye.com"><strong>Thesis tracker</strong></a>
+          <a href="https://thesis.georgejkaye.com"
+            ><strong>Thesis tracker</strong></a
+          >
         </li>
         <li>
-          <a href="blanket.georgejkaye.com"
+          <a href="https://blanket.georgejkaye.com"
             ><strong>Blanket visualiser</strong></a
           >
           <em>Following the progress of a temperature blanket</em>
@@ -213,7 +218,7 @@
       <p>
         I've made some guides to impart the admin knowledge I've gained from
         four years of doing things in the Birmingham theory group to help the
-        next generation.
+        next generation:
       </p>
       <ul>
         <li>
